--- a/src/client/styles/tailwind.css
+++ b/src/client/styles/tailwind.css
@@ -2,29 +2,75 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+@layer base {
 
-@media (prefers-color-scheme: dark) {
+  /* --------------------------- Blue theme -------------------------- */
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: 0 0% 100%;
+    /* White */
+    --foreground: 240 10% 3.9%;
+    /* Dark foreground */
+    --border: 240 5.9% 90%;
+    /* Light border */
+    --destructive: 0 84.2% 60.2%;
+    /* Red destructive */
+    --destructive-foreground: 0 0% 98%;
+    /* Light text for destructive */
+    --primary: 215 100% 25%;
+    /* Primary color (converted #003680 to HSL) */
+    --primary-foreground: 0 0% 100%;
+    /* White text on primary */
+    --secondary: 44 100% 53%;
+    /* Secondary color (converted #FEB902 to HSL) */
+    --secondary-foreground: 0 0% 10%;
+    /* Dark text for secondary */
+    --accent: 233 100% 52%;
+    /* Accent color */
+    --accent-foreground: 240 5.9% 10%;
+    /* Accent foreground */
+    --muted: 240 4.8% 95.9%;
+    /* Muted background */
+    --muted-foreground: 240 3.8% 46.1%;
+    /* Muted foreground */
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
-}
+  .dark {
+    --background: 240 10% 3.9%;
+    /* Dark background */
+    --foreground: 0 0% 98%;
+    /* Light foreground */
+    --border: 240 3.7% 15.9%;
+    /* Dark border */
+    --destructive: 0 62.8% 30.6%;
+    /* Darker red destructive */
+    --destructive-foreground: 0 0% 98%;
+    /* Light text for destructive */
+    --primary: 217 100% 25%;
+    /* Primary color for dark mode */
+    --primary-foreground: 0 0% 98%;
+    /* Light text on primary */
+    --secondary: 44 100% 53%;
+    /* Secondary color for dark mode */
+    --secondary-foreground: 0 0% 98%;
+    /* Light text on secondary */
+    --accent: 230 100% 65%;
+    /* Accent for dark mode */
+    --accent-foreground: 0 0% 98%;
+    /* Light text for accent */
+    --muted: 240 3.7% 15.9%;
+    /* Dark muted background */
+    --muted-foreground: 240 5% 64.9%;
+    /* Light muted text */
+  }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+
+
+
+  * {
+    @apply border-border;
+  }
+
+  body {
+    @apply min-h-screen bg-background text-foreground;
   }
 }
